--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,2 +1,6 @@
-Here you can find all my previous posts:
-$partial("templates/post-list.html")$
+<h2>Archive</h2>
+
+<ul id="archive">
+    $partial("templates/post-list.html")$
+</ul>
+
