--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,7 +1,8 @@
 <ul>
     $for(posts)$
         <li>
-            <a href="$url$">$title$</a> - $date$
+            <a href="$url$">$title$</a>
+            - <em>$date$</em>
         </li>
     $endfor$
 </ul>
