--- a/templates/post.html
+++ b/templates/post.html
@@ -1,8 +1,8 @@
-<div class="info">
-    Posted on $date$
-    $if(author)$
-        by $author$
-    $endif$
-</div>
+<h1>$title$</h1>
+<p class="author">By <a href="http://beerendlauwers.be/">Beerend Lauwers</a></p>
 
 $body$
+
+<footer>
+  &copy; $date$ Beerend Lauwers &lt;beerendlauwers@gmail.com&gt;
+</footer>
