--- a/templates/default.html
+++ b/templates/default.html
@@ -8,6 +8,7 @@
         <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+        <script async defer src="https://factlink.com/lib/dist/factlink_loader.min.js"></script>
     </head>
     <body>
         <div class="page-wrap">
