Some custom CSS

--- a/templates/default.html
+++ b/templates/default.html
@@ -7,6 +7,7 @@
         <title>$title$</title>
         <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
+        <link rel="stylesheet" type="text/css" href="/css/custom.css" />
         <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
         <script async defer src="https://factlink.com/lib/dist/factlink_loader.min.js"></script>
         <script>
