--- a/css/custom.css
+++ b/css/custom.css
@@ -12,3 +12,18 @@ div.image.small .figure img {
   margin-top: 0;
   text-align: center;
 }
+
+.note p {
+    display: inline-block;
+}
+
+.note {
+    border: 2px dashed gray;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
+.note:before {
+    content: "Note:";
+    font-style:italic;
+}
