--- a/css/default.css
+++ b/css/default.css
@@ -8,7 +8,8 @@ body {
   color: #444;
   text-shadow: 1px 1px 1px #ffffff;
   font-size: 20px;
-  font-family: merriweather,georgia, serif;
+  font-family: geomanist, sans-serif;
+  font-size: 150%;
 }
 del {
   color: #888
@@ -16,19 +17,21 @@ del {
 h1 {
   margin-top: 0.5em;
   margin-bottom: 0;
+  text-align: center;
 }
 h1 + p {
   text-shadow: 1px 1px 1px #ffffff;
 }
 h2 {
-  font-size: 1.2em;
-  font-style: italic;
-  color: #546369;
+  font-size: 1.5em;
+  text-decoration: overline;
 }
 h3 {
-  font-size: 1em;
-  font-style: italic;
-  color: #666
+  font-size: 1.2em;
+  text-decoration: overline;
+}
+h4 {
+  text-decoration: overline;
 }
 a {
   color: #1a6e8e;
@@ -52,6 +55,12 @@ code {
   background: #f5f5f5;
   padding: 0.1em;
 }
+h2 > code {
+    padding: 0;
+    font-size: 1.3em;
+    vertical-align: top;
+    border: none;
+}
 pre code {
   border: 0;
 }
@@ -59,7 +68,7 @@ blockquote {
   border: 1px solid #ddd;
   background: #f5f5f5;
   padding: 0 1em;
-  margin: 0;
+  margin: 5px 0 0 5px;
   border-radius: 0.2em;
 }
 blockquote code,blockquote pre {
@@ -78,6 +87,7 @@ footer {
 }
 .author {
   font-style: italic;
+  text-align: center;
 }
 .author a {
   text-decoration: none;
