--- a/css/default.css
+++ b/css/default.css
@@ -10,6 +10,9 @@ body {
   font-size: 20px;
   font-family: geomanist, sans-serif;
   font-size: 150%;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
 }
 del {
   color: #888
